--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/edit.html.twig
@@ -3,8 +3,16 @@
 {% block body -%}
     <h1>Edificio - Edición</h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
+    {{ form_errors(edit_form) }}
 
+    <div>
+        {{ form_label(edit_form.nombre) }}
+        {{ form_errors(edit_form.nombre) }}
+        {{ form_widget(edit_form.nombre) }}
+    </div>
+                
+    {{ form_end(edit_form) }}
         
     
         <a class="btn btn-primary" href="{{ path('edificio') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
