--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/new.html.twig
@@ -3,8 +3,16 @@
 {% block body -%}
     <h1>Edificio - Creación</h1>
 
-    {{ form(form) }}
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
 
+    <div>
+        {{ form_label(form.nombre) }}
+        {{ form_errors(form.nombre) }}
+        {{ form_widget(form.nombre) }}
+    </div>
+                
+    {{ form_end(form) }}
         
     
         <a class="btn btn-primary" href="{{ path('edificio') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
