--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/edit.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body -%}
-    <h1>Reserva - Modificar/Editar</h1>
+    <h1>Reserva - Edición</h1>
                 
     {% for flashMessage in app.session.flashbag.get('notice') %}
                     <div class="alert alert-success flash-notice">
