--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Reserva/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body -%}
-    <h1>Reserva - Agregar</h1>
+    <h1>Reserva - Creación</h1>
     
                 {% for flashMessage in app.session.flashbag.get('notice') %}
                     <div class="alert alert-success flash-notice">
