--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/new.html.twig
@@ -7,7 +7,7 @@
 {% block body -%}
     <h1>Fechas Especiales - Creación</h1>
 
-    {{ form_start(orm) }}
+    {{ form_start(form) }}
         {{ form_errors(form) }}
         
         <div>
