--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Recurso/new.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Recurso/new.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Recurso - Creación</h1>
 
-    {{ form_start(eorm) }}
+    {{ form_start(form) }}
     {{ form_errors(form) }}
 
     <div>
@@ -11,7 +11,9 @@
         {{ form_errors(form.nombre) }}
         {{ form_widget(form.nombre) }}
     </div>
-                
+    
+    <p>----------</p>            
+    
     {{ form_end(form) }}
 
         
